[gd_scene load_steps=2 format=3 uid="uid://d0jtuc7d8jdyg"]

[ext_resource type="Script" path="res://health_component.gd" id="1_2iggx"]

[node name="HealthComponent" type="Node"]
script = ExtResource("1_2iggx")

[node name="VulnerableTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="VulnerableTimer" to="." method="_on_vulnerable_timer_timeout"]
